# airflow-tui

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
airflow_tui/: __main__.py
